@@ -1,6 +1,6 @@
 #
 # ovirt-host-deploy -- ovirt host deployer
-# Copyright (C) 2012-2013 Red Hat, Inc.
+# Copyright (C) 2012-2015 Red Hat, Inc.
 #
 # This library is free software; you can redistribute it and/or
 # modify it under the terms of the GNU Lesser General Public
@@ -17,15 +17,33 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 #
 
+include $(top_srcdir)/build/python.inc
+
 MAINTAINERCLEANFILES = \
 	$(srcdir)/Makefile.in \
 	$(NULL)
 
-EXTRA_DIST = \
-	.source \
+CLEANFILES = \
+	config.py \
 	$(NULL)
 
-sbin_SCRIPTS = \
-	ovirt-host-deploy \
-	ovirt-host-mgmt \
+dist_ovirthostmgmtlib_PYTHON = \
+	__init__.py \
+	constants.py \
+	$(NULL)
+
+ovirthostmgmtlib_PYTHON = \
+	config.py \
+	$(NULL)
+
+config.py:	\
+	$(top_srcdir)/configure.ac \
+	$(NULL)
+
+clean-local: \
+	python-clean \
+	$(NULL)
+
+all-local: \
+	python-syntax-check \
 	$(NULL)
