@@ -4,6 +4,7 @@ ovirt-host-deploy -- oVirt host deploy
 
  * tune: tuned: set the tuned profile based on environment variable,
    rhbz#1209418.
+ * mgmt: new component to enable host management.
 
 2015-01-15 - Version 1.3.1
 
